--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
         alt="Profile Picture"
       />
       <h1>Akula Amanaganti</h1>
-      <p>Web Developer | Designer | Programmer</p>
+      <p>Web Developer | Programmer</p>
     </header>
 
     <section>
@@ -82,9 +82,10 @@
         </li>
         <li>
           <strong>High School (10th Grade)</strong> - Chaitanya High School
-          (2017 - 2018)
+          (2017)
         </li>
       </ul>
     </section>
   </body>
 </html>
+
